--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Product -%>
+<%- model_class = Category -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -6,26 +6,32 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:category_id) %></th>
+      <th><%= model_class.human_attribute_name(:parent_id) %></th>
+      <th><%= model_class.human_attribute_name(:lft) %></th>
+      <th><%= model_class.human_attribute_name(:rgt) %></th>
+      <th><%= model_class.human_attribute_name(:depth) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @products.each do |product| %>
+    <% @categories.each do |category| %>
       <tr>
-        <td><%= link_to product.id, product_path(product) %></td>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.category_id %></td>
-        <td><%=l product.created_at %></td>
+        <td><%= link_to category.id, category_path(category) %></td>
+        <td><%= category.name %></td>
+        <td><%= category.description %></td>
+        <td><%= category.parent_id %></td>
+        <td><%= category.lft %></td>
+        <td><%= category.rgt %></td>
+        <td><%= category.depth %></td>
+        <td><%=l category.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_product_path(product), :class => 'btn btn-mini' %>
+                      edit_category_path(category), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      product_path(product),
+                      category_path(category),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,5 +42,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_product_path,
+            new_category_path,
             :class => 'btn btn-primary' %>
