Added image uploads

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.select :category_id, nested_set_options(Category, nil) {|i| "#{'-' * i.level} #{i.name}" } %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                products_path, :class => 'btn' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")), products_path, :class => 'btn' %>
+    <%= link_to "Add a Picture", new_picture_path(:product_id => @product) %>
   </div>
 <% end %>
