--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,6 +10,20 @@
   <dd><%= @product.description %></dd>
 </dl>
 
+<div id="pictures">
+  <% for picture in @product.pictures %>
+      <div class="picture">
+        <%= image_tag picture.image_url() if picture.image? %>
+        <div class="name"><%= picture.name %></div>
+        <div class="actions">
+          <%= link_to "edit", edit_picture_path(picture) %> |
+          <%= link_to "remove", picture, :confirm => 'Are you sure?', :method => :delete %>
+        </div>
+      </div>
+  <% end %>
+  <div class="clear"></div>
+</div>
+
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               products_path, :class => 'btn'  %>
