--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,25 @@
           <li><%= link_to "Link2", "/path2" %></li>
           <li><%= link_to "Link3", "/path3" %></li>
         </ul>
+        <ul class="nav pull-right">
+          <li class="divider-vertical"></li>
+          <% if user_signed_in? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%=current_user.email%> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Edit Detail</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Sing out", destroy_user_session_path %></li>
+                </ul>
+              </li>
+          <% else %>
+              <li>
+                <%= link_to "Sign in", new_user_session_path %>
+              </li>
+          <% end %>
+        </ul>
       </div>
       <!--/.nav-collapse -->
     </div>
