--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -19,7 +19,7 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= link_to category.id, category_path(category) %></td>
+        <td><%= link_to category.id, admin_categories_path(category) %></td>
         <td><%= category.name %></td>
         <td><%= category.description %></td>
         <td><%= category.parent_id %></td>
@@ -29,9 +29,9 @@
         <td><%=l category.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_category_path(category), :class => 'btn btn-mini' %>
+                      edit_admin_category_path(category), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      category_path(category),
+                      admin_categories_path(category),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -42,5 +42,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_category_path,
+            new_admin_category_path,
             :class => 'btn btn-primary' %>
