--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -58,7 +58,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%=current_user.email%> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Edit Detail</a></li>
+                  <li><%= link_to "Edit Profile", edit_admin_user_path(current_user) %></li>
                   <li><a href="#">Another action</a></li>
                   <li><a href="#">Something else here</a></li>
                   <li class="divider"></li>
@@ -78,16 +78,11 @@
 </div>
 
 <div class="container">
-
-  <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-  <% end %>
-
   <div class="row">
     <div class="span3 bs-docs-sidebar">
     <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="100">
-      <li><%= link_to "Products", nil %></li>
-      <li><%= link_to "Categories", nil %></li>
+      <li><%= link_to "Products", admin_products_path %></li>
+      <li><%= link_to "Categories", admin_categories_path %></li>
     </ul>
     </div>
     <!--/span-->
