--- a/app/views/admin/pictures/index.html.erb
+++ b/app/views/admin/pictures/index.html.erb
@@ -11,11 +11,13 @@
   <tr>
     <td><%=	 picture.name %></td>
     <td><%=	 picture.image %></td>
-    <td><%= link_to 'Show', picture %> <%= link_to 'Edit', edit_picture_path(picture) %> <%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', admin_picture_path(picture) %>
+      <%= link_to 'Edit', edit_admin_picture_path(picture) %>
+      <%= link_to 'Destroy', admin_pictures_path(picture), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Picture', new_picture_path %>
+<%= link_to 'New Picture', new_admin_picture_path %>
