--- a/app/views/admin/pictures/show.html.erb
+++ b/app/views/admin/pictures/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= link_to 'Edit', edit_picture_path(@picture) %> |
-<%= link_to 'Back', pictures_path %>
+<%= image_tag(@picture.image_url(:thumb)) if @picture.image? %>
+
+
+<%= link_to 'Edit', edit_admin_picture_path(@picture) %> |
+<%= link_to 'Back', admin_pictures_path %>
