--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -5,21 +5,21 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:category_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%= sortable 'id' %></th>
+      <th><%= sortable 'title' %></th>
+      <th><%= sortable 'description' %></th>
+      <th><%= sortable 'category_id' %></th>
+      <th><%= sortable 'created_at' %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= link_to product.id, admin_product_path(product) %></td>
+        <td><%= link_to product.id, product_path(product) %></td>
         <td><%= product.title %></td>
         <td><%= product.description %></td>
-        <td><%= product.category_id %></td>
+        <td><%= product.category.name %></td>
         <td><%=l product.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -34,6 +34,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= paginate @products %>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_admin_product_path,
