--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,7 +12,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
   <![endif]-->
 
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "admin", :media => "all" %>
 
   <!-- For third-generation iPad with high-resolution Retina display: -->
   <!-- Size should be 144 x 144 pixels -->
@@ -87,6 +87,14 @@
     </div>
     <!--/span-->
     <div class="span9">
+
+      <% flash.each do |name, msg| %>
+          <div class="alert alert-<%=name%>">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <strong><%= msg %></strong>
+          </div>
+      <% end %>
+
       <%= yield %>
     </div>
   </div>
