--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for @product, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
-  <%= f.select :category_id, nested_set_options(Category, nil) {|i| "#{'-' * i.level} #{i.name}" } %>
+  <%= f.input :category_id %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")), products_path, :class => 'btn' %>
-    <%= link_to "Add a Picture", new_picture_path(:product_id => @product) %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                products_path, :class => 'btn' %>
   </div>
 <% end %>
