--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -19,7 +19,7 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= link_to category.id, admin_categories_path(category) %></td>
+        <td><%= link_to category.id, admin_category_path(category) %></td>
         <td><%= category.name %></td>
         <td><%= category.description %></td>
         <td><%= category.parent_id %></td>
