--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= link_to product.id, product_path(product) %></td>
         <td><%= product.title %></td>
         <td><%= product.description %></td>
-        <td><%= product.category.name %></td>
+        <td><%= product.category_id %></td>
         <td><%=l product.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
