--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,113 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= content_for?(:title) ? yield(:title) : "Oauth" %></title>
+	<meta charset="utf-8" />
+	
+	<!-- Uncomment to make IE8 render like IE7 -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+	
+	<!-- Set the viewport width to device width for mobile -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
+	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+  
+	<!-- Included CSS Files -->
+	<%= stylesheet_link_tag    "public" %>
+	
+
+  
   <%= csrf_meta_tags %>
-
-  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-  <!--[if lt IE 9]>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-  <![endif]-->
-
-  <%= stylesheet_link_tag "application", :media => "all" %>
-
-  <!-- For third-generation iPad with high-resolution Retina display: -->
-  <!-- Size should be 144 x 144 pixels -->
-  <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-
-  <!-- For iPhone with high-resolution Retina display: -->
-  <!-- Size should be 114 x 114 pixels -->
-  <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-
-  <!-- For first- and second-generation iPad: -->
-  <!-- Size should be 72 x 72 pixels -->
-  <%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-
-  <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-  <!-- Size should be 57 x 57 pixels -->
-  <%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-
-  <!-- For all other devices -->
-  <!-- Size should be 32 x 32 pixels -->
-  <%= favicon_link_tag 'images/favicon.ico', :rel => 'shortcut icon' %>
 </head>
 <body>
+<body>
 
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="#">Oauth</a>
+<div class="row">
+  <div class="twelve columns">
 
-      <div class="container nav-collapse">
-        <ul class="nav">
-          <li><%= link_to "Link1", "/path1" %></li>
-          <li><%= link_to "Link2", "/path2" %></li>
-          <li><%= link_to "Link3", "/path3" %></li>
-        </ul>
-        <ul class="nav pull-right">
-          <li class="divider-vertical"></li>
-          <% if user_signed_in? %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%=current_user.email%> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Edit Detail</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><%= link_to "Sing out", destroy_user_session_path %></li>
+    <!-- Navigation -->
+
+    <div class="row">
+      <div class="twelve columns">
+
+        <nav class="top-bar">
+          <ul class="top-bar">
+            <li class="name"><h1><a href="#">Title</a></h1></li>
+            <li class="toggle-topbar"><a href="#"></a></li>
+          </ul>
+
+          <section>
+            <ul class="left">
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+
+            <ul class="right">
+              <li class="has-dropdown">
+                <a href="#">Link</a>
+
+                <ul class="dropdown">
+                  <li><a href="#">Dropdown Link</a></li>
+                  <li><a href="#">Dropdown Link</a></li>
+                  <li><a href="#">Dropdown Link</a></li>
                 </ul>
               </li>
-          <% else %>
-              <li>
-                <%= link_to "Sign in", new_user_session_path %>
-              </li>
-          <% end %>
-        </ul>
+            </ul>
+          </section>
+        </nav>
+
       </div>
-      <!--/.nav-collapse -->
     </div>
-  </div>
-</div>
 
-<div class="container">
+    <!-- End Navigation -->
 
-  <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-  <% end %>
+    <!-- The Orbit slider is initialized at the bottom of the page by calling .orbit() on #slider -->
 
-  <div class="row">
-    <div class="span3 bs-docs-sidebar">
-    <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="100">
-      <li><%= link_to "Products", nil %></li>
-      <li><%= link_to "Categories", nil %></li>
-    </ul>
+    <div class="row">
+      <div class="twelve columns">
+        <div id="slider">
+          <img src="http://placehold.it/1000x400&text=[img 1]" />
+          <img src="http://placehold.it/1000x400&text=[img 2]" />
+          <img src="http://placehold.it/1000x400&text=[img 3]" />
+          <img src="http://placehold.it/1000x400&text=[img 4]" />
+        </div>
+
+        <hr />
+      </div>
     </div>
-    <!--/span-->
-    <div class="span9">
+
+    <div class="row">
+
+      <!-- Side Bar -->
+
+      <div class="four mobile-four columns">
+
+        <img src="http://placehold.it/500x500&text=Logo">
+
+        <div class="hide-for-small panel">
+          <h3>Header</h3>
+          <h5 class="subheader">Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis.
+          </h5>
+        </div>
+
+        <a href="#">
+          <div class="panel callout radius">
+            <h6>99&nbsp; items in your cart</h6>
+          </div>
+        </a>
+
+      </div>
+
+      <!-- End Side Bar -->
+
+
+      <!-- Thumbnails -->
       <%= yield %>
+
     </div>
+
+
+    <!-- Footer -->
+
+    <footer class="row">
+      <div class="twelve columns"><hr />
+        <div class="row">
+
+          <div class="six columns">
+            <p>&copy; Copyright no one at all. Go to town.</p>
+          </div>
+
+          <div class="six columns">
+            <ul class="link-list right">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 2</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 4</a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </footer>
+
+    <!-- End Footer -->
+
   </div>
-  <!--/row-->
-
-  <footer>
-    <p>&copy; Company 2012</p>
-  </footer>
-
 </div>
-<!-- /container -->
 
-<!-- Javascripts
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<%= javascript_include_tag "application" %>
+<!-- Included JS Files  -->
+<%= javascript_include_tag 'public' %>
+
+<script type="text/javascript">
+    $(window).load(function() {
+        $('#slider').orbit();
+    });
+</script>
 
 </body>
 </html>
