--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -59,7 +59,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%=current_user.email%> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Edit Profile", edit_admin_user_path(current_user) %></li>
-                  <li><a href="#">Another action</a></li>
+                  <li><%= link_to "Authentication", authentications_path %></li>
                   <li><a href="#">Something else here</a></li>
                   <li class="divider"></li>
                   <li><%= link_to "Sing out", destroy_user_session_path %></li>
@@ -110,7 +110,7 @@
 <!-- Javascripts
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<%= javascript_include_tag "application" %>
+<%= javascript_include_tag "admin" %>
 
 </body>
 </html>
