--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -19,7 +19,7 @@
 	<%= stylesheet_link_tag 'public' %>
 	
 	<!-- Included JS Files  -->
-	<%= javascript_include_tag 'application' %>
+	<%= javascript_include_tag 'public' %>
   
   <%= csrf_meta_tags %>
 </head>
