--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -5,35 +5,35 @@
 .my-cart {
   position: absolute;
   z-index: 1050;
+  display: inline-block;
+  padding: 0; margin: 0;
+  width: 600px;
+  &:before {
+    margin: 0; padding: 0;
+    content: '';
+    display: inline-block;
+    border-left:   7px solid transparent;
+    border-right:  7px solid transparent;
+    border-bottom: 7px solid #ccc;
+    border-bottom-color: #e3e3e3;
+    position: absolute;
+    top: -7px;
+    right: 24px;
+  }
+  &:after {
+    margin: 0; padding: 0;
+    content: '';
+    display: inline-block;
+    border-left:   6px solid transparent;
+    border-right:  6px solid transparent;
+    border-bottom: 6px solid #f5f5f5;
+    position: absolute;
+    top: -5px;
+    right: 25px;
+  }
   a.close {
     position: relative;
-    top: 25px;
-    right: 10px;
+    top: 10px;
+    right: 15px;
   }
 }
-
-
-//.my-cart:after, .my-cart:before {
-//  bottom: 100%;
-//  border: solid transparent;
-//  content: " ";
-//  height: 0;
-//  width: 0;
-//  position: absolute;
-//  pointer-events: none;
-//}
-//
-//.my-cart:after {
-//  border-color: rgba(136, 183, 213, 0);
-//  border-bottom-color: #88b7d5;
-//  border-width: 30px;
-//  left: 50%;
-//  margin-left: -30px;
-//}
-//.my-cart:before {
-//  border-color: rgba(194, 225, 245, 0);
-//  border-bottom-color: #c2e1f5;
-//  border-width: 33px;
-//  left: 50%;
-//  margin-left: -33px;
-//}
