--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -39,7 +39,7 @@
   <div id="my-cart" class="my-cart" style="display: none">
     <a class="close" href="#">&times;</a>
     <div class="well">
-      <div id="cart"><%= render 'carts/cart' %></div>
+      <div id="cart" class="cart"><%= render 'carts/cart' %></div>
     </div><!--/.well -->
   </div>
 
@@ -60,9 +60,27 @@
             </ul>
             <ul class="nav pull-right">
               <li>
-                <a href="#" class="show-cart">My Cart <i class="icon-shopping-cart"></i></a>
+                <a id="my-cart-link" href="#" class="show-cart">
+                  <%= render 'carts/my_cart_info' %>
+                </a>
+
               </li>
-              <li><a href="#">Link</a></li>
+              <% if user_signed_in? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%=current_user.email%> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Edit Profile", edit_admin_user_path(current_user) %></li>
+                  <li><%= link_to "Authentication", authentications_path %></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Sing out", destroy_user_session_path %></li>
+                </ul>
+              </li>
+              <% else %>
+              <li>
+                <%= link_to "Sign in", new_user_session_path %>
+              </li>
+               <% end %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
