--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,1 +1,3 @@
 $('#cart').html("<%=j render @cart %>");
+$('#my-cart-link').html("<%=j render 'carts/my_cart_info' %>");
+$('#order-cart').html("<%=j render @cart %>");
