--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,9 +4,9 @@
     <div class="product">
       <h3>
         <%= link_to h(product.title), product %>
-        <%= number_to_currency(product.price, :unit => 'din', :separator => ',', :format => '%n %u') %>
+        <%= format_price(product.price) %>
       </h3>
-      Category: <%=h product.category.name %>
+      Category: <%=h !product.category.nil? ? product.category.name : '' %>
       <%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>
     </div>
 <% end %>
