--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -1,3 +1,10 @@
+.my-cart {
+  visibility: hidden;
+  &.visi{
+    visibility: visible;
+  }
+}
+
 .show-cart{
 	position: relative;
 	i{
@@ -8,7 +15,7 @@
 
 .nav > li > a > .my-cart-info{
 	position: absolute;
-	top: 3px;
-	right: 	-3px;
+	top: 1px;
+	right: 	4px;
 	z-index: 1050;
 }
