--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -36,86 +36,167 @@
   </head>
   <body>
 
-  <div id="my-cart" class="my-cart" style="display: none">
+  <div id="my-cart" class="my-cart">
     <a class="close" href="#">&times;</a>
     <div class="well">
       <div id="cart" class="cart"><%= render 'carts/cart' %></div>
     </div><!--/.well -->
   </div>
 
+    <div id="wrap">
 
-    <div class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
+        <div id="master-head">
+
+            <div class="container">
+              <h3 class="muted">Project name</h3>
+            </div>
+
+            <div class="navbar navbar-inverse navbar-static-top">
+              <div class="navbar-inner">
+                <div class="container">
+                  <ul class="nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Downloads</a></li>
+                  </ul>
+                  <ul class="nav pull-right">
+                    <li>
+                      <form class="form-search">
+                        <div class="input-append">
+                          <input type="text" class="span2 search-query">
+                          <button type="submit" class="btn btn-inverse">Search</button>
+                        </div>
+                      </form>
+                    </li>
+                    <li>
+                      <a id="my-cart-link" href="#" class="show-cart">
+                        <%= render 'carts/my_cart_info' %>
+                      </a>
+                    </li>
+                    <% if user_signed_in? %>
+                        <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.name %>
+                            <b class="caret"></b></a>
+                          <ul class="dropdown-menu">
+                            <li><%= link_to "Edit Profile", edit_admin_user_path(current_user) %></li>
+                            <li><%= link_to "Authentication", authentications_path %></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><%= link_to "Sing out", destroy_user_session_path %></li>
+                          </ul>
+                        </li>
+                    <% else %>
+                        <li>
+                          <%= link_to "Sign in", new_user_session_path %>
+                        </li>
+                    <% end %>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- /.navbar -->
+        </div><!-- /.master-head -->
+
+        <div id="carousel">
+            <div class="container">
+              <div class="row-fluid animated fadeInUp">
+                <div class="span12">
+                  <div id="home-carousel" class="carousel slide">
+                    <div class="carousel-inner">
+                      <!--slide-->
+                      <!--slide-->
+                      <div class="item">
+                        <div class="row-fluid">
+                          <div class="span1"></div>
+                          <div class="span6 animated rotateInDownLeft">
+                            <img src="assets/img/slider/image1.png" alt="">
+                          </div>
+                          <div class="span4 animated rotateInUpRight block">
+                            <h3>Fully Responsive Theme</h3>
+                            <p>
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                              sed do eiusmod tempor incididunt ut labore et dolore magna
+                              aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                              ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                            <a class="btn btn-danger" href="index.html">Read more</a>
+                          </div>
+                          <div class="span1"></div>
+                        </div>
+                      </div>
+                      <div class="item active">
+                        <div class="row-fluid">
+                          <div class="span1"></div>
+                          <div class="span4 span4 animated rotateInDownLeft block">
+                            <h3>10 Page Templates</h3>
+                            <p>
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                              sed do eiusmod tempor incididunt ut labore et dolore magna
+                              aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                              ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                            <a class="btn btn-danger" href="services.html">Read more</a>
+                          </div>
+                          <div class="span6 animated rotateInUpRight">
+                            <img src="assets/img/slider/image2.png" alt="">
+                          </div>
+
+                        </div>
+                      </div>
+
+                    </div>
+
+                    <a class="carousel-control left" href="#home-carousel" data-slide="prev">‹</a>
+                    <a class="carousel-control right" href="#home-carousel" data-slide="next">›</a>
+
+                  </div>
+                </div><!--/carousel-inner-->
+
+              </div>
+            </div>
+        </div><!--/#carousel -->
+
+      <div id="content">
         <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Oauth</a>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to 'Products', products_path %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-            </ul>
-            <ul class="nav pull-right">
-              <li>
-                <a id="my-cart-link" href="#" class="show-cart">
-                  <%= render 'carts/my_cart_info' %>
-                </a>
-
-              </li>
-              <% if user_signed_in? %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%=current_user.email%> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Edit Profile", edit_admin_user_path(current_user) %></li>
-                  <li><%= link_to "Authentication", authentications_path %></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><%= link_to "Sing out", destroy_user_session_path %></li>
-                </ul>
-              </li>
-              <% else %>
-              <li>
-                <%= link_to "Sign in", new_user_session_path %>
-              </li>
-               <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <div class="row-fluid">
+            <div class="span12">
+              <% flash.each do |name, msg| %>
+                  <div class="alert alert-<%=name%>">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <strong><%= msg %></strong>
+                  </div>
+              <% end %>
+              <%=yield%>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container">
-        <div class="row">
-          <div class="span12">
+        <div id="push"></div>
+    </div><!--/#wrap -->
 
-            <% flash.each do |name, msg| %>
-                <div class="alert alert-<%=name%>">
-                  <button type="button" class="close" data-dismiss="alert">×</button>
-                  <strong><%= msg %></strong>
-                </div>
-            <% end %>
 
-             <%= yield %>
-          </div>
-        </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
-
-    </div> <!-- /container -->
+    <div id="footer">
+        <div class="container">
+            <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+        </div>
+    </div><!--/#footer -->
 
 
 
 
-
-    <!-- Javascripts
-    ================================================== -->
+  <!-- Javascripts
+  ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "public" %>
+
+    <script>
+      jQuery(document).ready(function() {
+          SpongeApp.init();
+      });
+    </script>
 
   </body>
 </html>
