--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,20 +2,14 @@
     <p id="notice"><%= notice %></p>
 <% end %>
 
-<div class="eight columns">
-  <div class="row">
-
-    <% for product in @products %>
-        <div class="four mobile-two columns">
-          <img src="http://placehold.it/1000x1000&text=Thumbnail">
-
-          <div class="panel">
-            <h5><%= product.title %></h5>
-            <h6 class="subheader"><%= number_to_currency(product.price) %></h6>
-          </div>
-        </div>
-    <% end %>
-
-  </div>
-</div>
+<% for product in @products %>
+    <div class="product">
+      <h3>
+        <%= link_to h(product.title), product %>
+        <%= format_price(product.price) %>
+      </h3>
+      Category: <%=h !product.category.nil? ? product.category.name : '' %>
+      <%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>
+    </div>
+<% end %>
 
