added more control to

--- a/app/assets/stylesheets/sponge/navbar.less
+++ b/app/assets/stylesheets/sponge/navbar.less
@@ -16,6 +16,14 @@
         margin: 10px 15px;
       }
     }
+    .navbar-brand-logo{
+      display: none;
+    }
+    &.navbar-fixed-top{
+      .navbar-brand-logo{
+        display: block;
+      }
+    }
   }
 
   .nav .active > a,
