--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -55,6 +55,7 @@
               <div class="navbar-inner">
                 <div class="container">
                   <ul class="nav">
+                    <li class="navbar-brand-logo"><a href="#">svezacipele</a></li>
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Services</a></li>
