--- a/app/assets/stylesheets/sponge/sponge.css.less
+++ b/app/assets/stylesheets/sponge/sponge.css.less
@@ -17,9 +17,14 @@
 // Font Awesome
 @import "fontawesome";
 
+
 // Sponge theme
 @import "sponge/variables";
 @import "sponge/layouts";
 @import "sponge/navbar";
 @import "sponge/carousel";
 @import "sponge/animate";
+@import "sponge/labels-badges";
+@import "sponge/fonts";
+@import "sponge/type";
+@import "sponge/thumbnails";
