--- a/app/assets/stylesheets/sponge/variables.less
+++ b/app/assets/stylesheets/sponge/variables.less
@@ -2,8 +2,19 @@
 
 @contentBackground: #cbcbcb;
 
+@labelInfoBackground: #209afa;
+@labelInfoBackgroundHighlight: #0455fa;
+
+@labelWarningBackground: #FF9A00;
+@labelWarningBackgroundHighlight: #B26C00;
+
 @navbarInverseBackground: #990823;
 @navbarInverseBackgroundHighlight: #72061a;
+@navbarInverseBorder: #D80B31;
+
+@navbarInverseLinkColor: #E1E1E1;
 
 @grayBackground:                #414141;
 @grayBackgroundHighlight:       #323232;
+
+@headingsFontFamily: "Cuprum", Helvetica, Arial, sans-serif;
