--- a/app/assets/stylesheets/sponge/carousel.less
+++ b/app/assets/stylesheets/sponge/carousel.less
@@ -1,9 +1,12 @@
-#carousel{
-  background-color: @grayBackground;
-  .container{
-    background:transparent url(img/header-background.png) no-repeat center center;
-  }
-  .carousel{
-    height: 250px;
-  }
+#carousel {
+    background-color: @grayBackground;
+    .container {
+        background: transparent url(img/header-background.png) no-repeat center center;
+    }
+    .carousel {
+        height: 250px;
+        .item {
+            height: 500px;
+        }
+    }
 }
