--- a/app/assets/stylesheets/sponge/navbar.less
+++ b/app/assets/stylesheets/sponge/navbar.less
@@ -1,9 +1,11 @@
 #master-head {
-  #gradient > .vertical(@grayBackground, @grayBackgroundHighlight);
+    position: relative;
+    z-index: 10;
+    #gradient > .vertical(@grayBackground, @grayBackgroundHighlight);
 
   .navbar-inner {
-    border-top: 1px solid #990823;
-    border-bottom: 1px solid #73061a;
+    border-top: 1px solid @navbarInverseBackground;
+    border-bottom: 1px solid @navbarInverseBackgroundHighlight;
   }
 
   .navbar .nav > li > a {
@@ -30,13 +32,13 @@
   .nav .active > a:hover,
   .nav .active > a:focus {
     .box-shadow(inset 0 1px 15px rgba(0,0,0,.85)); // Redeclare so transitions work
-    border-bottom: 2px solid #D80B31;
+    border-bottom: 2px solid @navbarInverseBorder;
     &:before {
       margin: 0; padding: 0;
       content: ' ';
       height: 0; width: 0;
       border: 7px solid transparent;
-      border-top-color: #D80B31;
+      border-top-color: @navbarInverseBorder;
       position: absolute;
       top: 100%;
       left: 50%;
