--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,15 +1,1 @@
-<% if notice %>
-    <p id="notice"><%= notice %></p>
-<% end %>
-
-<% for product in @products %>
-    <div class="product">
-      <h3>
-        <%= link_to h(product.title), product %>
-        <%= format_price(product.price) %>
-      </h3>
-      Category: <%=h !product.category.nil? ? product.category.name : '' %>
-      <%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>
-    </div>
-<% end %>
-
+<%= render :partial => 'store/featured' %>
