--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -6,6 +6,14 @@
 </div>
 
 <div class="control-group">
+   <%= f.label :name, t("activerecord.attributes.user.name", :default => "Name"), :class => 'control-label' %>
+  <div class="input">
+    <%= f.text_field :name, :class => 'text_field' %>
+  </div>
+</div>
+
+
+<div class="control-group">
    <%= f.label :password, t("activerecord.attributes.user.password", :default => "password"), :class => 'control-label' %>
   <div class="input">
     <%= f.password_field :password, :class => 'password_field' %>
