--- a/app/assets/stylesheets/sponge/layouts.less
+++ b/app/assets/stylesheets/sponge/layouts.less
@@ -21,7 +21,7 @@ html, body {
 #content{
   position: relative;
   z-index: 10;
-  padding-top: 50px;
+  padding: 50px 0;
   border-top: 1px solid #dcdcdc;
   .box-shadow(0 -5px 15px -10px rgba(0,0,0,.75));
   background: @contentBackground url(img/content-background.png) no-repeat right top;
