--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -83,6 +83,7 @@
     <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="100">
       <li><%= link_to "Products", admin_products_path %></li>
       <li><%= link_to "Categories", admin_categories_path %></li>
+      <li><%= link_to "Users", admin_users_path %></li>
     </ul>
     </div>
     <!--/span-->
