--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -65,12 +65,12 @@
                   </ul>
                   <ul class="nav pull-right">
                     <li>
-                      <form class="form-search">
-                        <div class="input-append">
-                          <input type="text" class="span2 search-query">
-                          <button type="submit" class="btn btn-inverse">Search</button>
-                        </div>
-                      </form>
+                      <%= form_tag products_search_path, :class => 'form-search', method: :post  do %>
+                          <div class="input-append">
+                              <%= text_field_tag :search, params[:search], { :class => 'span2 search-query',  }  %>
+                              <button type="submit" class="btn btn-inverse"><%=t(:search)%></button>
+                          </div>
+                      <% end %>
                     </li>
                     <li>
                       <a id="my-cart-link" href="#" class="show-cart">
