--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,16 @@
 <% title "Products" %>
 
-<% for product in @products %>
-    <div class="product">
-      <h3>
-        <%= link_to h(product.title), product %>
-        <%= format_price(product.price) %>
-      </h3>
-      Category: <%=h !product.category.nil? ? product.category.name : '' %>
-      <%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>
-    </div>
-<% end %>
+<div class="row-fluid">
+  <div class="span12">
+    <% for product in @products %>
+        <div class="product">
+          <h3>
+            <%= link_to h(product.title), product %>
+            <%= format_price(product.price) %>
+          </h3>
+          Category: <%=h !product.category.nil? ? product.category.name : '' %>
+          <%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>
+        </div>
+    <% end %>
+  </div>
+</div>
