--- a/app/assets/stylesheets/sponge/navbar.less
+++ b/app/assets/stylesheets/sponge/navbar.less
@@ -32,7 +32,6 @@
   .nav .active > a:hover,
   .nav .active > a:focus {
     .box-shadow(inset 0 1px 15px rgba(0,0,0,.85)); // Redeclare so transitions work
-    border-bottom: 2px solid @navbarInverseBorder;
     &:before {
       margin: 0; padding: 0;
       content: ' ';
@@ -44,6 +43,9 @@
       left: 50%;
       margin-left: -7px;
     }
+    // &.show-cart{
+    //   border-bottom: 2px solid @navbarInverseBorder;
+    // }
   }
 
   .navbar .nav > li.active {
