--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -72,8 +72,8 @@
                           </div>
                       <% end %>
                     </li>
-                    <li>
-                      <a id="my-cart-link" href="#" class="show-cart">
+                    <li class="dropdown">
+                      <a id="my-cart-link" href="#" class="cart-toggle">
                         <%= render 'carts/my_cart_info' %>
                       </a>
                     </li>
