--- a/app/assets/stylesheets/sponge/navbar.less
+++ b/app/assets/stylesheets/sponge/navbar.less
@@ -43,7 +43,7 @@
       left: 50%;
       margin-left: -7px;
     }
-    // &.show-cart{
+    // &.cart-toggle{
     //   border-bottom: 2px solid @navbarInverseBorder;
     // }
   }
@@ -51,4 +51,13 @@
   .navbar .nav > li.active {
     position: relative;
   }
+
+    // Dropdowns
+  .nav li.dropdown.open > .cart-toggle,
+  .nav li.dropdown.active > .cart-toggle,
+  .nav li.dropdown.open.active > .cart-toggle {
+    background-color: @navbarInverseLinkBackgroundActive;
+    color: @navbarInverseLinkColorActive;
+  }
+
 }
