--- a/app/views/layouts/shop.html.erb
+++ b/app/views/layouts/shop.html.erb
@@ -60,7 +60,7 @@
             </ul>
             <ul class="nav pull-right">
               <li>
-                <a id="my-cart-link" href="#" class="show-cart">
+                <a id="my-cart-link" href="#" class="cart-toggle">
                   <%= render 'carts/my_cart_info' %>
                 </a>
 
