--- a/app/assets/stylesheets/sponge/sponge.css.less
+++ b/app/assets/stylesheets/sponge/sponge.css.less
@@ -20,10 +20,10 @@
 
 // Sponge theme
 @import "sponge/variables";
+@import "sponge/scaffolding";
 @import "sponge/layouts";
 @import "sponge/navbar";
 @import "sponge/carousel";
-@import "sponge/animate";
 @import "sponge/labels-badges";
 @import "sponge/fonts";
 @import "sponge/type";
