--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -48,7 +48,7 @@
         <div id="master-head">
 
             <div class="container">
-              <h2 class="logo"><%= t(:site_name)%></h2>
+              <a href="<%= root_path %>"><h2 class="logo"><%= t(:site_name)%></h2></a>
             </div>
 
             <div class="navbar navbar-inverse navbar-static-top">
