--- a/app/assets/stylesheets/sponge/navbar.less
+++ b/app/assets/stylesheets/sponge/navbar.less
@@ -32,6 +32,7 @@
   .nav .active > a:hover,
   .nav .active > a:focus {
     .box-shadow(inset 0 1px 15px rgba(0,0,0,.85)); // Redeclare so transitions work
+    border-bottom: 2px solid @navbarInverseBorder;
     &:before {
       margin: 0; padding: 0;
       content: ' ';
@@ -43,9 +44,6 @@
       left: 50%;
       margin-left: -7px;
     }
-    // &.cart-toggle{
-    //   border-bottom: 2px solid @navbarInverseBorder;
-    // }
   }
 
   .navbar .nav > li.active {
