--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -41,6 +41,8 @@
   </tbody>
 </table>
 
+<%= paginate @categories %>
+
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_admin_category_path,
             :class => 'btn btn-primary' %>
