--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -3,4 +3,5 @@
 *= require bootstrap_and_overrides.css.less
 *= require admin/jquery.fileupload-ui
 *= require admin/bootstrap-image-gallery
+*= require admin/bootstrap-editable
 */
