--- a/app/assets/stylesheets/sponge/variables.less
+++ b/app/assets/stylesheets/sponge/variables.less
@@ -1,6 +1,7 @@
 @primaryColor: #FF9A00;
+@secondaryColor: #8C081F;
 
-@contentBackground: #cbcbcb;
+@contentBackground: #fafafa;
 
 @labelInfoBackground: #209afa;
 @labelInfoBackgroundHighlight: #0455fa;
@@ -13,6 +14,8 @@
 @navbarInverseBorder: #D80B31;
 
 @navbarInverseLinkColor: #E1E1E1;
+
+@wellBackground: #969696;
 
 @grayBackground:                #414141;
 @grayBackgroundHighlight:       #323232;
