--- a/app/assets/stylesheets/sponge/type.less
+++ b/app/assets/stylesheets/sponge/type.less
@@ -1,9 +1,22 @@
 h1, h2, h3, h4, h5, h6 {
     &.logo{
         color: @primaryColor;
-        text-shadow: -1px -2px 1px rgba(0,0,0,.25)
+        text-shadow: -1px -2px 1px rgba(0,0,0,.25);
+    }
+    &.well-title{
+        padding: 10px 15px; margin: 0; margin-bottom: 15px;
+        border-bottom: 1px solid gray;
     }
     &.no-margin{
         margin: 0;
+    }
+}
+
+.hero-unit{
+    h1, h2, h3, h4, h5, h6 {
+        margin: 20px 0; padding-bottom: 10px;
+        border-bottom: 2px solid @primaryColor;
+        color: @white;
+        text-shadow:1px 1px 3px rgba(0,0,0,.5);
     }
 }
