--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -36,12 +36,12 @@
   </head>
   <body>
 
-  <div id="my-cart" class="my-cart">
-    <a class="close" href="#">&times;</a>
-    <div class="well">
-      <div id="cart" class="cart"><%= render 'carts/cart' %></div>
-    </div><!--/.well -->
-  </div>
+  <!--<div id="my-cart" class="my-cart">-->
+    <!--<a class="close" href="#">&times;</a>-->
+    <!--<div class="well">-->
+      <!--<div id="cart" class="cart"><%= render 'carts/cart' %></div>-->
+    <!--</div>&lt;!&ndash;/.well &ndash;&gt;-->
+  <!--</div>-->
 
     <div id="wrap">
 
@@ -70,21 +70,18 @@
                           </div>
                       <% end %>
                     </li>
-                     <li class="dropdown">
-                          <a href="#" id="my-cart-link" class="dropdown-toggle" data-toggle="dropdown">
-                            <%= render 'carts/my_cart_info' %>
-                          </a>
-                          <ul class="dropdown-menu">
-                            <li>
-                              <!-- <a class="close" href="#">&times;</a> -->
-                              <div id="cart" class="cart"><%= render 'carts/cart' %></div>
-                            </li>
-                          </ul>
-                        </li>
                     <li class="dropdown">
-                      <a id="my-cart-link" href="#" class="cart-toggle">
+                      <a href="#" id="my-cart-link" class="dropdown-toggle" data-toggle="dropdown">
                         <%= render 'carts/my_cart_info' %>
                       </a>
+                      <ul class="dropdown-menu">
+                        <li>
+                          <!-- <a class="close" href="#">&times;</a> -->
+                          <div id="cart" class="cart">
+                            <%= render 'carts/cart' %>
+                          </div>
+                        </li>
+                      </ul>
                     </li>
                     <% if user_signed_in? %>
                         <li class="dropdown">
@@ -171,14 +168,17 @@
 
       <div id="content">
 
-      <% flash.each do |name, msg| %>
-          <div class="alert alert-<%=name%>">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong><%= msg %></strong>
-          </div>
-      <% end %>
+
 
         <div class="container">
+
+          <% flash.each do |name, msg| %>
+              <div class="alert alert-<%=name%>">
+                <button type="button" class="close" data-dismiss="alert">×</button>
+                <strong><%= msg %></strong>
+              </div>
+          <% end %>
+
             <%=yield%>
         </div>
 
@@ -191,7 +191,12 @@
 
     <div id="footer">
         <div class="container">
-            <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+          <address class="credit">
+            <strong>Twitter, Inc.</strong><br>
+            795 Folsom Ave, Suite 600<br>
+            San Francisco, CA 94107<br>
+            <abbr title="Phone">P:</abbr> (123) 456-7890
+          </address>
         </div>
     </div><!--/#footer -->
 
