--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,48 @@
 <% title "Products" %>
 
-<div class="row-fluid">
-  <div class="span12">
-    <% for product in @products %>
-        <div class="product">
-          <h3>
-            <%= link_to h(product.title), product %>
-            <%= format_price(product.price) %>
-          </h3>
-          Category: <%=h !product.category.nil? ? product.category.name : '' %>
-          <%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>
+<div class="well well-products">
+    <div class="row-fluid">
+        <div class="span4">
+            <h2 class="well-title">Heading</h2>
         </div>
-    <% end %>
-  </div>
+        <div class="span8">
+
+          <div class="btn-toolbar" style="margin: 0;">
+            <div class="btn-group">
+              <button class="btn btn-warning">Sortirano po ceni <i class="icon-arrow-up"></i></button>
+              <button class="btn btn-info dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li class="active"><a href="#">Cena <i class="icon-arrow-up"></i></a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button class="btn">5</button>
+              <button class="btn">6</button>
+              <button class="btn">7</button>
+            </div>
+          </div>
+
+
+        </div>
+    </div>
+    <%=	 render 'products' %>
 </div>
+
+<!--<div class="row-fluid">-->
+  <!--<div class="span12">-->
+    <!--<% for product in @products %>-->
+        <!--<div class="product">-->
+          <!--<h3>-->
+            <!--<%= link_to h(product.title), product %>-->
+            <!--<%= format_price(product.price) %>-->
+          <!--</h3>-->
+          Category: <%=h !product.category.nil? ? product.category.name : '' %>
+          <!--<%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>-->
+        <!--</div>-->
+    <!--<% end %>-->
+  <!--</div>-->
+<!--</div>-->
