--- a/app/views/store/_featured.html.erb
+++ b/app/views/store/_featured.html.erb
@@ -3,12 +3,11 @@
         <div class="span12">
             <h2>
                 Izdvajamo
-                <span class="pull-right">
-                    <a class="btn" href="#feature-products" data-slide="prev">prev</a>
-                    <a class="btn" href="#feature-products" data-slide="next">next</a>
-                </span>
+                <div class="btn-group pull-right">
+                    <a class="btn btn-primary" href="#feature-products" data-slide="prev"><i class="icon-arrow-left"></i></a>
+                    <a class="btn btn-primary" href="#feature-products" data-slide="next"><i class="icon-arrow-right"></i></a>
+                </div>
             </h2>
-            <hr>
             <div id="feature-products" class="carousel slide">
                 <div class="carousel-inner">
                     <% @index = 0 %>
