tables less added

--- a/app/assets/stylesheets/sponge/dropdowns.less
+++ b/app/assets/stylesheets/sponge/dropdowns.less
@@ -1,5 +1,7 @@
 .dropdown-menu {
 
+	#translucent > .background(@dropdownBackground, 0.92);
+	
 	> li > div {
     display: block;
     padding: 3px 20px;
