--- a/app/assets/stylesheets/sponge/sponge.css.less
+++ b/app/assets/stylesheets/sponge/sponge.css.less
@@ -28,5 +28,6 @@
 @import "sponge/fonts";
 @import "sponge/type";
 @import "sponge/thumbnails";
+@import "sponge/tables";
 @import "sponge/dropdowns";
 @import "sponge/wells";
