--- a/app/assets/stylesheets/sponge/variables.less
+++ b/app/assets/stylesheets/sponge/variables.less
@@ -17,7 +17,23 @@
 
 @wellBackground: #969696;
 
+@tableBorder: @grayDark;
+
 @grayBackground:                #414141;
 @grayBackgroundHighlight:       #323232;
 
 @headingsFontFamily: "Cuprum", Helvetica, Arial, sans-serif;
+
+// Dropdowns
+// -------------------------
+@dropdownBackground:            #FFB84C;
+@dropdownBorder:                rgba(0,0,0,.2);
+@dropdownDividerTop:            #e5e5e5;
+@dropdownDividerBottom:         @white;
+
+@dropdownLinkColor:             @grayDark;
+@dropdownLinkColorHover:        @white;
+@dropdownLinkColorActive:       @white;
+
+@dropdownLinkBackgroundActive:  darken(@dropdownBackground, 15%);
+@dropdownLinkBackgroundHover:   darken(@dropdownBackground, 5%);
