--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -179,7 +179,10 @@
               </div>
           <% end %>
 
-            <%=yield%>
+            <div class="hero-unit">
+              <%=yield%>
+            </div>
+
         </div>
 
       </div><!--/#content -->
