--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,8 @@
 <% title "Products" %>
 
-<div class="well well-products">
     <div class="row-fluid">
         <div class="span4">
-            <h2 class="well-title">Heading</h2>
+            <h2 class="well-title">Proizvodi</h2>
         </div>
         <div class="span8">
 
@@ -19,30 +18,10 @@
                 <li><a href="#">Separated link</a></li>
               </ul>
             </div>
-            <div class="btn-group">
-              <button class="btn">5</button>
-              <button class="btn">6</button>
-              <button class="btn">7</button>
-            </div>
           </div>
 
 
         </div>
     </div>
-    <%=	 render 'products' %>
-</div>
 
-<!--<div class="row-fluid">-->
-  <!--<div class="span12">-->
-    <!--<% for product in @products %>-->
-        <!--<div class="product">-->
-          <!--<h3>-->
-            <!--<%= link_to h(product.title), product %>-->
-            <!--<%= format_price(product.price) %>-->
-          <!--</h3>-->
-          Category: <%=h !product.category.nil? ? product.category.name : '' %>
-          <!--<%= link_to raw('<i class="icon-plus-sign"></i> Add to Cart'), line_items_path(product_id: product), :method => :post, remote: true, :class => 'btn btn-primary' %>-->
-        <!--</div>-->
-    <!--<% end %>-->
-  <!--</div>-->
-<!--</div>-->
+    <%=	 render 'products' %>
