--- a/app/assets/stylesheets/sponge/sponge.css.less
+++ b/app/assets/stylesheets/sponge/sponge.css.less
@@ -31,3 +31,5 @@
 @import "sponge/tables";
 @import "sponge/dropdowns";
 @import "sponge/wells";
+@import "sponge/cart";
+@import "sponge/importants";
