--- a/app/views/carts/_my_cart_info.erb
+++ b/app/views/carts/_my_cart_info.erb
@@ -1,4 +1,4 @@
-<span>My Cart</span> <i class="icon-shopping-cart"></i>
+<span>Moja Korpa</span> <i class="icon-shopping-cart icon-m-size"></i>
 <div id="my-cart-info" class="my-cart-info <%= current_cart.line_items.length > 0 ? '':'hide'%>">
 <span class="badge badge-warning"><span id="my-cart-info-value"><%=current_cart.line_items.length%></span>
 </span>
