--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -2,7 +2,7 @@
   <td><%= line_item.product.title %></td>
   <td><%= format_price(line_item.product.price) %></td>
   <td>
-    <div class="btn-group">
+    <div class="btn-group no-margin-top">
       <%= link_to raw('<i class="icon-minus"></i>'), line_items_path(product_id: line_item.product, remove: true), :action => :remove, :method => :post, remote: true, :class => 'btn btn-small btn-primary' %>
       <button type="button" class="btn btn-small btn-primary active"><strong><%= line_item.quantity %></strong></button>
       <%= link_to raw('<i class="icon-plus"></i>'), line_items_path(product_id: line_item.product), :method => :post, remote: true, :class => 'btn btn-small btn-primary' %>
